--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "filminu",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.16.0"
+  },
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^3.4.1",
@@ -11,6 +14,9 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
+
+  "build": "ng build",
+  "heroku-postbuild": "ng build --prod",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
