--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^3.4.1",
+    "firebase-tools": "^7.12.1",
+    "firebase": "^5.8.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
